--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "vitepress": "^0.20.1"
   },
   "scripts": {
-    "docs:dev": "vitepress dev docs",
+    "docs:dev": "vitepress dev docs --port=3500",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
     "docs:push": "rsync --ignore-existing -r -avz ./docs/.vitepress/dist/* jca@lab.iwu.de:/var/www/doc.rentalcal.eu",
